[QA-10785] Dropped -XX:MaxPermSize JVM option which is no longer supported in JDK 8